# rules_play_routes

./: .gitignore  README.md  WORKSPACE  dependencies.yml
play-routes/: BUILD  play-routes.bzl
play-routes-compiler/: BUILD.bazel
test/: BUILD.bazel  PlayRoutesCompilerTest.scala
test/conf/: routes
tools/: BUILD
