load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_repl", "scala_test")

scala_binary(
  name = "play-routes-compiler",
  srcs = glob(["src/main/**/*.scala"]),
  visibility = ["//visibility:public"],
  main_class = "rulesplayroutes.routes.CommandLinePlayRoutesCompiler",
  deps = [
    "//3rdparty/jvm/com/typesafe/play:routes_compiler_2_11",
    "//3rdparty/jvm/com/github/scopt:scopt_2_11",
#    "@scala_scala_reflect//jar",
  ],
)
